# ag

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
shader/: Build.txt  DX_ColorFragmentShader.hlsl  DX_ColorInclude.hlsl  DX_ColorVertexShader.hlsl  DX_ModelColorNoLightFragmentShader.hlsl  DX_ModelColorNoLightVertexShader.hlsl  DX_ModelTextureNoLightFragmentShader.hlsl  DX_ModelTextureNoLightInclude.hlsl  DX_ModelTextureNoLightVertexShader.hlsl  DX_StringFragmentShader.hlsl  DX_StringVertexShader.hlsl  DX_TextureFragmentShader.hlsl  DX_TextureInclude.hlsl  DX_TextureVertexShader.hlsl  GL_ColorVertexShader.glsl  GL_ModelColorNoLightFragmentShader.glsl  GL_ModelColorNoLightVertexShader.glsl  GL_ModelTextureNoLightFragmentShader.glsl  GL_ModelTextureNoLightVertexShader.glsl  GL_StringFragmentShader.glsl  GL_TextureFragmentShader.glsl  GL_TextureVertexShader.glsl  Metal_ColorVFShader.metal  Metal_ModelColorNoLightVFShader.metal  Metal_ModelTextureNoLightVFShader.metal  Metal_StringVFShader.metal  Metal_TextureVFShader.metal
src/: CMakeLists.txt  Defines.cmake
src/CMake/: FindFreeImage.cmake  FindFreeTypeEx.cmake  FindGLEWEx.cmake  FindGLFW.cmake  FindGLM.cmake
src/include/ag/: Build.hpp  Engine.hpp  ImageIO.hpp  KeyCode.hpp  Looper.hpp  Window.hpp  ag.hpp  agOne.hpp
src/include/ag/easy/: App.hpp
src/include/ag/graphics/: Camera.hpp  Font.hpp  FontFactory.hpp  FontMap.hpp  FontMetrics.hpp  FontSprite.hpp  IBuffer.hpp  IGraphicsDevice.hpp  IGraphicsDriver.hpp  IRenderFunction.hpp  IShader.hpp  IShaderCompiler.hpp  IShaderParameter.hpp  ITexture.hpp  ImageLoader.hpp  Material.hpp  MatrixStack.hpp  Mesh.hpp  MeshDrawMode.hpp  Model.hpp  Node.hpp  PrimitiveType.hpp  RenderPass.hpp  Renderer.hpp  RenderingContext.hpp  RenderingObject.hpp  ShaderCode.hpp  ShaderParameter.hpp  TextureFormat.hpp  VertexData.hpp  VertexData2D.hpp  VertexData3D.hpp
src/include/ag/graphics/dx/: DxBuffer.hpp  DxGraphicsDevice.hpp  DxGraphicsDriver.hpp  DxPso.hpp  DxPsoCache.hpp  DxPsoPool.hpp  DxRenderFunction.hpp  DxRenderingContext.hpp  DxShader.hpp  DxShaderCompiler.hpp  DxSurface.hpp  DxTexture.hpp  DxUtil.hpp
src/include/ag/graphics/mtl/: MtlBuffer.hpp  MtlBufferPool.hpp  MtlBufferPoolSet.hpp  MtlGraphicsDevice.hpp  MtlGraphicsDriver.hpp  MtlRenderFunction.hpp  MtlRenderingContext.hpp  MtlShader.hpp  MtlShaderCompiler.hpp  MtlShaderLayout.hpp  MtlTexture.hpp  MtlUniformManager.hpp
src/include/ag/graphics/ogl/: OglBuffer.hpp  OglGraphicsDevice.hpp  OglGraphicsDriver.hpp  OglRenderFunction.hpp  OglRenderingContext.hpp  OglShader.hpp  OglShaderCompiler.hpp  OglShaderLayout.hpp  OglTexture.hpp
src/include/ag/graphics/vk/: VkBuffer.hpp  VkGraphicsDevice.hpp  VkGraphicsDriver.hpp  VkRenderFunction.hpp  VkShader.hpp  VkShaderCompiler.hpp  VkTexture.hpp
src/include/ag/input/: ButtonState.hpp  IInputDetector.hpp  InputState.hpp  InputSystem.hpp  KeyCode.hpp  MouseButton.hpp
src/include/ag/native/: assimp.hpp  dx.hpp  freeimage.hpp  glfw.hpp  glm.hpp  metal.hpp
src/include/ag/native/osx/: CAMetalLayer.hpp  Metal.hpp  MetalOne.hpp  NSView.hpp  NSWindow.hpp
src/include/ag/native/win32/: d3dx12.hpp
src/include/ag/object/: Component.hpp  GameObject.hpp  GameObjectCollection.hpp  ModelRenderer.hpp
src/include/ag/scene/: IScene.hpp  SceneBase.hpp  SceneManager.hpp
src/include/ag/ui/: Align.hpp  BorderLayout.hpp  BorderLayoutParameter.hpp  BoxLayout.hpp  BoxLayoutManager.hpp  BoxLayoutParameter.hpp  Button.hpp  Component.hpp  Container.hpp  DeviceEvent.hpp  EventQueue.hpp  Font.hpp  Frame.hpp  HBox.hpp  ILayoutManager.hpp  KeyEvent.hpp  Label.hpp  LayoutElement.hpp  LayoutManagerBase.hpp  LayoutParameter.hpp  MouseEvent.hpp  Orientation.hpp  Panel.hpp  Rect.hpp  RenderingUtil.hpp  TextField.hpp  VBox.hpp
src/include/ag/util/: Random.hpp
src/lib/ag/: Build.cpp  Engine.cpp  ImageIO.cpp  Looper.cpp  Window.cpp  ag.cpp
src/lib/ag/easy/: App.cpp
src/lib/ag/graphics/: Camera.cpp  Font.cpp  FontFactory.cpp  FontMap.cpp  FontMetrics.cpp  FontSprite.cpp  ImageLoader.cpp  Material.cpp  MatrixStack.cpp  Mesh.cpp  Model.cpp  Node.cpp  RenderPass.cpp  Renderer.cpp  RenderingContext.cpp  RenderingObject.cpp  ShaderParameter.cpp  VertexData.cpp  VertexData2D.cpp  VertexData3D.cpp
src/lib/ag/graphics/dx/: DxBuffer.cpp  DxGraphicsDevice.cpp  DxGraphicsDriver.cpp  DxPso.cpp  DxPsoCache.cpp  DxPsoPool.cpp  DxRenderFunction.cpp  DxRenderingContext.cpp  DxShader.cpp  DxShaderCompiler.cpp  DxSurface.cpp  DxTexture.cpp  DxUtil.cpp
src/lib/ag/graphics/mtl/: MtlBuffer.cpp  MtlBufferPool.cpp  MtlBufferPoolSet.cpp  MtlGraphicsDevice.cpp  MtlGraphicsDriver.cpp  MtlRenderFunction.cpp  MtlRenderingContext.cpp  MtlShader.cpp  MtlShaderCompiler.cpp  MtlTexture.cpp  MtlUniformManager.cpp
src/lib/ag/graphics/ogl/: OglBuffer.cpp  OglGraphicsDevice.cpp  OglGraphicsDriver.cpp  OglRenderFunction.cpp  OglRenderingContext.cpp  OglShader.cpp  OglShaderCompiler.cpp  OglTexture.cpp
src/lib/ag/input/: InputState.cpp  InputSystem.cpp  KeyCode.cpp
src/lib/ag/native/: glfw.cpp
src/lib/ag/native/osx/: CAMetalLayer.cpp  MetalOne.cpp  NSView.cpp  NSWindow.cpp
src/lib/ag/object/: Component.cpp  GameObject.cpp  GameObjectCollection.cpp  ModelRenderer.cpp
src/lib/ag/scene/: SceneBase.cpp  SceneManager.cpp
src/lib/ag/ui/: BorderLayout.cpp  BorderLayoutParameter.cpp  BoxLayout.cpp  BoxLayoutManager.cpp  BoxLayoutParameter.cpp  Button.cpp  Component.cpp  Container.cpp  DeviceEvent.cpp  EventQueue.cpp  Font.cpp  Frame.cpp  HBox.cpp  KeyEvent.cpp  Label.cpp  LayoutElement.cpp  LayoutManagerBase.cpp  LayoutParameter.cpp  MouseEvent.cpp  Panel.cpp  Rect.cpp  RenderingUtil.cpp  TextField.cpp  VBox.cpp
src/lib/ag/util/: Random.cpp
testdata/models/: Ball.fbx  Cube.fbx  TextureCube.fbx  link.txt
tests/Hello/: CMakeLists.txt  main.cpp
tests/Image/: CMakeLists.txt  main.cpp
tests/LowLevel/: CMakeLists.txt  main.cpp
tests/Model/: CMakeLists.txt  main.cpp
tests/ModelDraw/: CMakeLists.txt  main.cpp
tests/UI/: main.cpp  (+1 more)
tool/: MakeDebug.py  MakeKeyCode.py  MakeSingleHeader.py  ShaderPack.py  WinTestSetup.py  clean.sh
(+32 files in other folders)
